--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ gunicorn
 # the outcome of using this bypass is that locally you will need to use either SQLite or connect to Heroku's Postgres DB
 django-heroku
 django-allauth
+
+psycopg2-binary
